v4.2/source/README.md
# 个人工作台 · v4.2

v4.2 基于 v4.1 建立，继续遵循“简洁、本地优先的个人助手”方向，本阶段重点规划生活管理模块的行动化改造。

## v4.2 新增

- 生活模块新增“生活首页”，优先展示今天事项、下一段出行、近期重要日子和当前阅读
- 生活事项按“今天与已到期、未来 7 天、暂无日期、更晚、已完成”分组，移除模块内重复日历
- 出行清单支持逐项勾选，并显示准备进度和下一步行动
- 财务记录可关联出行，出行页自动汇总已发生的关联支出
- 阅读增加下一步行动与计划日期，支持开始阅读、进度 ＋10% 和标记读完
- 纪念日扩展为“重要日子”，支持提前 7、14、30 天准备并一键生成生活事项
- 已结束出行和已完成生活事项默认收起，减少长期使用后的页面膨胀
- 保持 v4.1 的生活事项、书籍、旅行清单、纪念日和手填出行花费兼容
- `tests/life-summary.test.js`：覆盖事项分组、旧旅行清单迁移、财务关联、重要日子与首页渲染

## v4.1 新增

- 财务模块拆分为“财务首页、收支明细、预算与账单、基金”四个清晰入口
- 首页优先回答本月收入、支出、结余、预算余量、主要分类和未来固定账单
- 统一“实际发生”口径：未来记录和周期账单不会提前计入收支、趋势及资产
- 周期收支改为待确认账单，可确认入账、调整来源规则或忽略本次
- 新增总预算与分类预算设置，并展示已用、剩余和超支状态
- 收支录入表单优先展示类型、金额、日期、分类，低频信息收进“更多信息”
- 基金分为持仓与仅关注，汇总市值、持仓收益并提示净值数据新鲜度
- 保持数据只存本机，兼容 v4 原有收支、预算和基金记录
- `tests/finance-metrics.test.js`：覆盖实际与计划分离、预算、分类及趋势统计

## v4 新增

- `src/app/module-preferences.js`：统一管理可选模块的启用、置顶和顺序，关闭模块不删除数据
- `src/ui/pages/more-page.js`：“更多”页升级为模块中心，同时收纳导入导出、备份、同步和操作手册
- 顶部导航最多固定 3 个可选模块，避免重新回到入口过载
- 今天页和日历只展示已启用模块的摘要和筛选项
- 新建事项保存打开表单时的分类，修复从今天/日历编辑时的分类偏移
- 修复编辑任务时“里程碑”选中状态反转问题
- 普通新建事项默认不强制填入今天，仅从日历进入时预填日期
- 移除低频且占用页面空间的批量模式，保留单条完成、编辑和删除的直接操作
- 科研模块改为“进展助手”：默认展示近期风险、论文下一步和成果管线
- 论文“进展阶段”与“作者角色”分离，兼容旧版拟投/在投/合作数据
- 论文支持下一步行动、截止日、等待对象和跟进日，阶段变更会自动写入历史
- 论文下一步自动生成关联科研事项，带日期时同步进入“今天”和日历
- 健康模块新增“健康首页”，优先展示今日计划、本周进度、最近运动和身体趋势
- 每周运动时长、次数和目标体重可按个人状态调整，不再使用固定考核目标
- 运动计划支持完成并记录、改到明天、今天休息和恢复，保留原有周计划数据
- 运动记录表单收敛为类型、时长、日期和运动感受，名称可自动生成
- 体重摘要改为近 7 天均值与近 30 天变化，减少对单日波动和首次记录的过度关注
- 今天页和周回顾会使用个人运动目标，并在有今日计划时提供直接入口
- `tests/module-preferences.test.js`：覆盖模块启用、导航拦截、置顶上限和数据保留
- `tests/research-summary.test.js`：覆盖论文阶段统计、等待跟进优先级和跨类型截止日汇总
- `tests/health-metrics.test.js`：覆盖个性化目标、周进度、跳过计划和身体趋势计算

## 产品原则

- 打开后先回答“今天做什么”
- 默认界面保持简单，专业能力通过模块按需开启
- 启用和隐藏只改变入口，不破坏用户数据
- 高风险的数据工具集中放在明确的数据中心

## 上一阶段：Phase 9

Phase 9 在继续保持“点击一个 HTML 即可直接用”的前提下，开始引入 selector / derived-state 层，并把 work 页更多区块改成 helper 驱动，减少直接读全局变量与重复拼接 HTML。

## 本阶段新增

### Selectors / Derived State
- `src/app/selectors.js`：统一提供 `uiState()`、`filteredItems()`、`workModuleModel()` 等派生数据入口
- `src/ui/pages/work-page.js`：改为优先通过 selector 获取 work 视图数据，而不是直接散落读取全局状态

### UI Helper 增强
- `src/ui/helpers/panel-kit.js`：新增 `toolbar` / `metaRow` / `list`，继续扩展 `section` 级别拼装能力
- work 页中的 tabs / collapsible / 空状态 / 列表块进一步改为 helper 驱动

### Bootstrap
- `src/app/bootstrap-phase9.js`：Phase 9 版本标记与启动补丁

## 保持的设计原则
- `portable/个人工作台.html` 仍是普通用户入口
- `source/` 仍是开源和持续重构用源码
- legacy 层仍保留，用于渐进式迁移，不做一次性推翻
- 优先“包裹式接管”而不是一次性重写，确保功能不断裂
- 先建立 page / module / selector 三层入口，再逐步把页面改造成 view-model 驱动

## 当前已模块化接管的主干
- Overview
- Work（已开始 selector 化）
- Finance
- Research
- Life
- Sport
- Habit（增强包装）

## 重新生成便携版

```bash
python scripts/build_portable.py
```
